--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CFM.pathBeetweenStackedNodes)
 export(CFM.plotCFGraph)
 export(CFM.plotCFGraphComparison)
 export(EfirstOrderMarkovModel)
+export(QOD)
 export(QoDInspector)
 export(calcolaEnhancedFootPrintTable.pat.process)
 export(calcolaFootPrintTable.pat.process)
@@ -15,12 +16,16 @@ export(cluster_hierarchicalTree)
 export(cluster_partitionAroundMedoids)
 export(confCheck_easy)
 export(dataLoader)
+export(dateTimeWizard)
 export(firstOrderMarkovModel)
 export(logInspector)
+export(nDFD)
+export(plotCohortTimeline)
 export(resource_001)
 import(DiagrammeR)
 import(XML)
 import(cluster)
 import(progress)
+import(stringr)
 import(survival)
 importFrom(data.table,data.table)
